# kg-rag-thesis-v2

./: .gitignore  baseline.ipynb  collect_context.ipynb  evaluate.ipynb  main.py  pyproject.toml
results/: predictions_qwen3.5:2b_nothink.json  predictions_qwen3.5:2b_thinking.json
